// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`App component testing > Renders /shop outlet content 1`] = `
<DocumentFragment>
  <nav>
    Nav here
  </nav>
  <h1>
    Shop goes here
  </h1>
  <footer>
    Footer here
  </footer>
</DocumentFragment>
`;

exports[`App component testing > Renders default outlet content 1`] = `
<DocumentFragment>
  <nav>
    Nav here
  </nav>
  <h1>
    Home goes here
  </h1>
  <footer>
    Footer here
  </footer>
</DocumentFragment>
`;

exports[`App routing testing > Renders /shop outlet content 1`] = `
<DocumentFragment>
  <div
    class="_app_2e2173"
  >
    <nav
      class="_nav_2e2173"
    >
      Nav here
    </nav>
    <main
      class="_main_2e2173"
    >
      <h1>
        Shop goes here
      </h1>
    </main>
    <footer
      class="_footer_2e2173"
    >
      Footer here
    </footer>
  </div>
</DocumentFragment>
`;

exports[`App routing testing > Renders default outlet content 1`] = `
<DocumentFragment>
  <div
    class="_app_2e2173"
  >
    <nav
      class="_nav_2e2173"
    >
      Nav here
    </nav>
    <main
      class="_main_2e2173"
    >
      <div
        class="_imgBg_345077"
      >
        <h1>
          Home goes here
        </h1>
      </div>
    </main>
    <footer
      class="_footer_2e2173"
    >
      Footer here
    </footer>
  </div>
</DocumentFragment>
`;
